fix text alignment in followup item

--- a/js/packages/react-ui/src/components/FollowUpItem/followUpItem.scss
+++ b/js/packages/react-ui/src/components/FollowUpItem/followUpItem.scss
@@ -14,6 +14,7 @@
   width: 100%;
   color: cssUtils.$primary-text;
   cursor: pointer;
+  text-align: left;
 
   &:last-child {
     border-bottom: none;
